// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/MarkdownImage should match snapshot 1`] = `
<Connect(ExternalImage)
  imageMetadata={
    Object {
      "format": "png",
      "frame_count": 0,
      "height": 165,
      "width": 1041,
    }
  }
  src="/images/logo.png"
>
  <Component />
</Connect(ExternalImage)>
`;

exports[`components/MarkdownImage should match snapshot for SizeAwareImage dimensions 1`] = `
<React.Fragment>
  <SizeAwareImage
    className="markdown-inline-img markdown-inline-img--hover cursor--pointer a11y--active"
    dimensions={
      Object {
        "format": "jpg",
        "frame_count": 0,
        "height": 100,
        "width": 100,
      }
    }
    onClick={[Function]}
    showLoader={true}
    src="safeSrc"
  />
  <Connect(ViewImageModal)
    fileInfos={
      Array [
        Object {
          "extension": "jpg",
          "has_preview_image": false,
          "link": "safeSrc",
          "name": "test image",
        },
      ]
    }
    onModalDismissed={[Function]}
    postId="post_id"
    show={false}
    startIndex={0}
  />
</React.Fragment>
`;

exports[`components/MarkdownImage should render a link if the source is unsafe 1`] = `
<a
  className="theme markdown__link"
  href=""
  rel="noopener noreferrer"
  target="_blank"
>
  test image
</a>
`;

exports[`components/MarkdownImage should render an image with no preview if the source is safe and the image is a link 1`] = `
<div>
  <SizeAwareImage
    className="markdown-inline-img"
    dimensions={
      Object {
        "format": "png",
        "frame_count": 0,
        "height": 165,
        "width": 1041,
      }
    }
    onClick={[Function]}
    showLoader={true}
    src="https://example.com/image.png"
  />
</div>
`;

exports[`components/MarkdownImage should render an image with preview modal if the source is safe 1`] = `
<div>
  <SizeAwareImage
    className="markdown-inline-img markdown-inline-img--hover cursor--pointer a11y--active"
    dimensions={
      Object {
        "format": "png",
        "frame_count": 0,
        "height": 165,
        "width": 1041,
      }
    }
    onClick={[Function]}
    showLoader={true}
    src="https://example.com/image.png"
  />
  <Connect(ViewImageModal)
    fileInfos={
      Array [
        Object {
          "extension": "png",
          "has_preview_image": false,
          "link": "https://example.com/image.png",
          "name": "test image",
        },
      ]
    }
    onModalDismissed={[Function]}
    postId="post_id"
    show={false}
    startIndex={0}
  />
</div>
`;
